--- a/app/static/css/content_calendar.css
+++ b/app/static/css/content_calendar.css
@@ -1931,11 +1931,11 @@ html.dark .content-type-option.selected {
 }
 
 .spinner {
-    border: 2px solid #e5e7eb;
+    border: 3px solid rgba(229, 231, 235, 0.3);
     border-top-color: #3B82F6;
     border-radius: 50%;
-    width: 24px;
-    height: 24px;
+    width: 32px;
+    height: 32px;
     animation: spin 1s linear infinite;
 }
 
