--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -309,7 +309,7 @@
                     </div>
                     <div class="preview-feature">
                         <i class="ph ph-check-circle"></i>
-                        <span>Title & More</span>
+                        <span>Upload Studio</span>
                     </div>
                     <div class="preview-feature">
                         <i class="ph ph-check-circle"></i>
