--- a/app/templates/x_post_editor/index.html
+++ b/app/templates/x_post_editor/index.html
@@ -99,9 +99,13 @@
                     <div class="enhancement-options">
                         <!-- Create Options -->
                         <div class="options-container active" data-category="create">
-                            <button class="option-btn active" data-preset="braindump">
-                                <i class="ph ph-brain"></i>
-                                <span>Braindump</span>
+                            <button class="option-btn active" data-preset="keyword">
+                                <i class="ph ph-key"></i>
+                                <span>Keyword</span>
+                            </button>
+                            <button class="option-btn" data-preset="raw_text">
+                                <i class="ph ph-text-align-left"></i>
+                                <span>Raw Text</span>
                             </button>
                         </div>
                         <!-- Improve Options -->
