--- a/app/templates/video_title_tags/index.html
+++ b/app/templates/video_title_tags/index.html
@@ -163,7 +163,7 @@
                         <div class="form-group">
                             <label class="form-label">
                                 <i class="ph ph-article"></i>
-                                Video Concept/ Script
+                                Video Description or Script
                             </label>
                             <textarea class="input-textarea"
                                       id="videoInput"
