--- a/app/static/css/content_calendar.css
+++ b/app/static/css/content_calendar.css
@@ -1149,6 +1149,13 @@ html.dark .fc-event.platform-other {
     opacity: 0.85;
 }
 
+/* Clock icon for X scheduled posts */
+.fc-event.x-scheduled .clock-icon {
+    margin-right: 6px;
+    font-size: 0.875em;
+    opacity: 0.85;
+}
+
 .fc-event-main {
     font-weight: 500 !important;
 }
